--- a/src/client/index.html
+++ b/src/client/index.html
@@ -137,7 +137,6 @@
                     Link 2
                 </a>
             </div>
-
             <!-- Overlay -->
             <div id="overlay" class="menu-overlay"></div>
 
@@ -170,6 +169,31 @@
             </div>
 
             <div class="flex justify-end">
+                <button ws-onclick="NewFile" title="New program" class="ml-auto">
+                    <svg xmlns="http://www.w3.org/2000/svg"
+                         viewBox="0 0 24 24" style="width:32px;height:32px;" class="w-5 h-5 hover:fill-gray-400"
+                         fill="none"
+                         stroke="currentColor"
+                         stroke-width="2"
+                         stroke-linecap="round"
+                         stroke-linejoin="round">
+                        <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z" />
+                        <polyline points="14 2 14 8 20 8" />
+                    </svg>
+                </button>
+
+                <button ws-onclick="ZoomIn" title="Zoom in">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="width:32px;height:32px;" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path d="M12 8v8m4-4H8" />
+                    </svg>
+                </button>
+                <button ws-onclick="ZoomOut" title="Zoom out">
+                    <svg xmlns="http://www.w3.org/2000/svg" style="width:32px;height:32px;"
+                         class="mr-2 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path d="M8 12h8" />
+                    </svg>
+                </button>
+
                 <button ws-onclick="OnRun" title="Alt+R" id="playButton" class="inline-flex items-center justify-center bg-green-500 hover:bg-green-600 active:bg-green-800 text-white font-bold py-1 px-2 text-lg rounded outline-none focus:outline-none mr-2 w-auto">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14.752 11.168l-4.707-4.707A1 1 0 008.586 7v10a1 1 0 001.414 1.414l4.707-4.707a1 1 0 000-1.414z" />
@@ -178,7 +202,7 @@
                 </button>
 
                 <button ws-onclick="ThemeToggle" class="ml-auto">
-                    <svg style="width:32px;height:32px;" class="w-5 h-5"
+                    <svg style="width:32px;height:32px;" class="hover:fill-gray-400"
                          aria-hidden="true"
                          fill="currentColor"
                          viewBox="0 0 20 20">
@@ -198,8 +222,10 @@
                         class="textarea text-lg font-mono focus:outline-none dark:bg-gray-600"></textarea>
             <div class="splitter"></div>
             <!-- Adjustments inside the flex-1 container on the right side of the main panel -->
-            <div class="flex flex-col flex-1 focus:outline-none bg-white">
-                <canvas ws-anchor="Canvas" width="1024" height="1024" style="width:100%;height:75%;flex-shrink:0;"></canvas>
+            <div style="width:66%" class="flex flex-col flex-1 focus:outline-none bg-white">
+                <div style="overflow: auto; height: 75%; width: 100%;background-color:#f0f0f0;justify-content:center;align-items:center;">
+                    <canvas ws-anchor="Canvas" width="1024" height="1024" style="background-color:white;flex-shrink:0;border:1px solid #ccc;"></canvas>
+                </div>
                 <div class="splitter-v"></div>
                 <!-- This div becomes a flex container itself -->
                 <div style="flex-grow: 1; display: flex; flex-direction: column;">
